# Treadmill

./: .gitignore  Carlisle_Kuo_optimization of energy and time predicts dynamic speeds for human walking.docx  Experiment breif - effort and locomotor learning.docx  README.md  Readme.txt  Split-belt Paper References (Lit).pptx  SplitBelt Studies.xlsx  Treadmill - Shortcut.lnk  VICON_ControllerCommand.m  VICON_ControllerCommand_figuringOutTheStructure.m  WalkingStudies.docx
BertecCMake/: CMakeLists.txt  README.md  main.cpp
BertecCommunication/: treadmill remote control.html  treadmill remote control.txt
Bertec_Device_SDK_October_2019/: BertecDevice.lib  BertecDeviceNET.xml  BertecExample.cpp  Revision History.html
Bertec_Device_SDK_October_2019/x64/: BertecDevice.lib
Runviconandanalysis/Runviconandanalysis/fwdviconrunfiles/: AlignAsymmetryPlots.asv  AlignAsymmetryPlots.m  CrossoverAnalysis.m  CrossoverEliminated.asv  CrossoverEliminated.m  CrossoverEvent.m  CrossoverEventsFP1.m  Crossover_ForceDerivatives.m  Crossover_toffhs.m  Crossovertesting.asv  Crossovertesting.m  FindStartofLearning.m  NOTMINECrossoverEvents.m  PlotVerticalForce.m  StructGrapher.m  StructMaker.m  alignProfiles2_copy.m  runvicon_csv.m  runvicon_csv97.m  runvicon_csvNOMOCAP.asv  runvicon_csvNOMOCAP.m  thingy.m  untitled5.m  untitled8.asv  untitled8.m
forceplateonly_viconstarter/: FP_00_LoadNewSubj.m  FP_01_buildSubjectStructure.m  FP_02_identifyHeelStrike.m  FP_03_getLearningCurves_v3.m  getHeelStrikeForce_SC.m  readme_matlabscripts.txt  readviconcsv_nocameras_SC.m
forceplateonly_viconstarter/matData/: CJG_F.mat  CJG_FP.mat  CJG_p.mat  RMM_F.mat
summerClass_starter/: TMModel_00_readViconModelOutputs.m  TMModel_01_buildSubjectStructure.m  TMSC_00_LoadNewSubj.m  TMSC_01_buildSubjectStructure.m  TMSC_02_identifyHeelStrike.m  TMSC_03_getLearningCurves_v3.m  getHeelStrikeForce_SC.m  readviconcsv_SC.m  readviconmodelcsv_SC.m
summerClass_starter/matData/: DGB_id.mat  DGB_ik.mat
viconmatlab_effort_splitbelt-new24Jan2023/viconmatlab_effort_splitbelt/: readviconcsv_1.m  vicon_stick_1.m  vicon_sticksub.m
viconmatlab_starter/: Description of scripts and functions.docx  MAC_ID_0.fig  MAC_IK_0.fig  Old_TM2_02b_identifyHeelStrikes.m  TM02_identifyHeelStrikes.m  TM03_1_plotHeelStrike.m  TM03_2_getLearningCurve.m  TM03_3_plotlearningcuve_stepsonX.m  TM04_identifysplitstart.m  TM0_readNewSubjCSV.m  TM1_identifyHeelStrikes.m  TM2Figure_protocol.m  TM2IkId_00_readnewsubjSTOtoMAT.m  TM2IkId_01_buildSubjectStructureIK.m  TM2Ik_00_readnewsubjSTOtoMAT.m  TM2Subject_TrimIndices.xlsx  TM2_000_runScriptSequence.m  TM2_00_LoadNewSubj.asv  TM2_00_LoadNewSubj.m  TM2_01_buildSubjectStructure.asv  TM2_01_buildSubjectStructure.m  TM2_02_identifyHeelStrike.asv  TM2_02_identifyHeelStrike.m  TM2_02a_identifyHeelStrikes.m  TM2_02b_identifyHeelStrikes.asv  TM2_02b_identifyHeelStrikes.m  TM2_03_getLearningCurves.m  TM2_03_getLearningCurves_connorForces.m  TM2_03_getLearningCurves_steptime.m  TM2_03_getLearningCurves_v2.asv  TM2_03_getLearningCurves_v2.m  TM2_03_getLearningCurves_v3.asv  TM2_03_getLearningCurves_v3.m  TM2_03_getLearningCurves_v3_without_hsValid.m  TM2_03_getSteptimeCurves.asv  TM2_03_getSteptimeCurves.m  TM2_03_getSteptimeCurves_16March.m  TM2_03_heelStrikeValidation.m  TM2_03_stepLengthStepTime_cleaned.m  TM2_03b_heelStrikeValidation.m  (+132 more)
viconmatlab_starter/10April_ZipForConnor/: TM2_01_buildSubjectStructure.m  TM2_03_getLearningCurves_v2.m  TM2figure_plotLearningCurves_againstSteps.m  getHeelStrikeForce.m  getHeelStrikeForce_index.m  getHeelStrikeMarker.m
viconmatlab_starter/Figures/: GRFz_tiedex_subj9blk3.ai  GRFz_tiedex_subj9blk3.fig  Rplot_LMER_visit1blk4.ai  bootstrapCI_sampleindivfit.fig  crossover_TM2.ai  dataAquisition_TM2.ai  indivSubj_expfits.ai  indivSubj_expfits.fig  protocol_B+W_slides.ai  protocol_TM2.ai  splitbelttreadmill+weightvest.ai
viconmatlab_starter/Figures/steplength_asym/: SLA_blk4.5.6.fig  SLA_learn+relearn_allgroups.ai  SLA_visit1blk4.ai  SLA_visit1blk4.fig  SLA_visit1blk46.ai  SLA_visit1blk46.fig  SLA_visit1blk46_RMASB.ai  SLA_visit1blk4_allsubj.fig  SLA_visit1blk4_bar+expCI.ai  SLA_visit1blk4_bar.ai  SLA_visit1blk4_nocontrol.ai  SLA_visit1blk5+46.ai  SLA_visit1blk5.ai  SLA_visit1blk5.fig  SLA_visit1blk6.ai  SLA_visit1blk6.fig  SLA_visit1blk6_nocontrolai.ai  SLA_visit2blk4+.ai  SLA_visit2blk4.ai  SLA_visit2blk4.fig  SLA_visit2blk5.fig  SLA_visit2blk6.ai  SLA_visit2blk6.fig  Steplength_Unilateral.fig  Steplength_Unilateral_visit1blk4.ai  Steplength_Unilateral_visit1blk4.fig
viconmatlab_starter/Figures/steptime_asym/: STA_blk4.5.6.fig
viconmatlab_starter/TM2_Rstudio/: TM2_Learning_1stVisit_v0.R  TM2_allexposures.R  TM2_compareBaseline+groups.R
viconmatlab_starter/definingGroundReactionMoment/TreadmillMoments/: GRM_compareAcquire_to_NEXUSexport.m
viconmatlab_starter/dla_effortandsplitbelt_Oct2023scripts/: TM2_01_buildSubjectStructure.m  TM2_03b_heelStrikeValidation.m  getHeelStrikeForce_RMM0.m  getHeelStrikeMarker_index.m
viconmatlab_starter/fitExp_knkTools/: fitExpModels_RMM.m  fitExpModels_RMM_streamlined.m  fitSingleExpPSO.m  fitSingleExpPSO_RMM.m  fitSingleExp_RM.asv  fitSingleExp_RM.m
viconmatlab_starter/html/: resampleToPercentGait.html
viconmatlab_starter/matData_IK/: MAC_ik.mat
viconmatlab_starter/matData_IKID/: MAC_id.mat  MAC_ik.mat
viconmatlab_starter/older code versions/: TM0_readNewSubjCSV.m  TM1_loadData.m  TM_dataValidataion.m  TM_splitbeltStructure.m
viconmatlab_starter/older code versions/removed on 28April2023/: TM00_readNewSubjCSVtoMAT.m  TM01_buildSubjectStructure.m  TM2_03_getLearningCurves.asv  TM2_03_getLearningCurves.m  TM2_03_getLearningCurves_old.m
viconmatlab_starter/viconmatlab_starter_31Jan2023/viconmatlab_effort_splitbelt/: TM2_03_getSteptimeCurves.m  TM2_04_otherMetrics.m  diff23f5.m  readviconcsv.m  runvicon_csv.m  runvicon_csv_v2.m  runvicon_csv_v2_steptime.asv  vicon_stick.m  (+1 more)
viconmatlab_starter/working_10Mar2023/: TM2figure_plotLearningCurves_againstSteps.m
x32/: BertecExampleNET.cs  bertecif.h
x64/: BertecDeviceNET.xml
(+19 files in other folders)
